2006-02-03  Erick Gallesio  <eg@essi.fr>

	* src/system.c: primitive CURRENT-TIME as been renamed to
	CURRENT-SECOND. to be compliant with SRFI-18.
	
	* A bunch of new functions have been added for time. 	

2006-02-01  Erick Gallesio  <eg@essi.fr>

	* src/stklos.h:
	* src/read.c:
	* src/port.c:
	* src/cond.c (STk_defcond_type): Use a function instead of the
	macro DEFCOND.

2006-01-31  Erick Gallesio  <eg@essi.fr>

	* src/port.c: Deleted the ssylog facility since it is avialable as
	an extension now

2006-01-30  Erick Gallesio  <eg@essi.fr>

	* src/stklos.h: Modifications for newer versions of the GC
	
	* src/stklos.c (main): Added call to GC_init for people using gc7.xx

2006-01-23  Erick Gallesio  <eg@essi.fr>

	* src/vm.c (apply): apply is now inlined in the VM.

2006-01-22  Erick Gallesio  <eg@essi.fr>

	* src/vm.c : Rewritten to avoid the usage of globals.

2006-01-04  Erick Gallesio  <eg@essi.fr>

	* 0.72 Release
	==================================================

2006-01-02  Erick Gallesio  <eg@essi.fr>

	* src/str.c : New primitive STRING-BLIT!

2005-12-30  Erick Gallesio  <eg@essi.fr>

	* src/number.c (STk_ulong2integer): Use to always return a 
	bignum. Fixed. 

2005-12-28  Erick Gallesio  <eg@essi.fr>

	* utils/stklos-ext-install: Modified to allow the installation of
	doc files in user repository.

2005-12-27  Erick Gallesio  <eg@essi.fr>

	* lib/compiler.stk: Corrected a bug on internal defines. 
	(define (foo) (define a 1) (define b a) (cons a b)) 
	was incorrect.

2005-12-26  Erick Gallesio  <eg@essi.fr>

	* src/parameter.c (STk_make_C_parameter2): New function to define 
	C parameters where the value of the parameter is implemented by a
	C function (as the converter. Used to obtain the value of errno
	for instance in Posix extension.

	* lib/bonus.stk: Added the PRINT and PRINTERR procedures.

2005-12-15  Erick Gallesio  <eg@essi.fr>

	* lib/srfi-66.stk : Added SRFI-66

2005-12-09  Erick Gallesio  <eg@essi.fr>
