@@ -21,19 +21,65 @@
 ;;;; 
 ;;;;           Author: Erick Gallesio [eg@essi.fr]
 ;;;;    Creation date: 26-Jan-2006 22:56 (eg)
-;;;; Last file update: 26-Jan-2006 23:03 (eg)
+;;;; Last file update:  6-Feb-2006 13:32 (eg)
 ;;;;
+(define (%thread-timeout->seconds timeout)
+  (cond
+    ((time? timeout) timeout)
+    ((not timeout)   timeout)
+    ((real? timeout) (+ (time->seconds (current-time))
+			timeout))
+    (else (error "bad timeout ~S" timeout))))
+ 
+
+(define (make-thread thunk :optional (name (symbol->string (gensym "thread"))))
+  (define (thread-handler c)
+    (DEBUG "Erreur dans une thread. Type de cond ~S" c)
+    (describe c)
+    (%thread-end-exception-set! (current-thread) c)
+    c)
+  (%make-thread (lambda ()
+		  (with-handler thread-handler
+		     (thunk)))
+		name))
 
 
 (define (thread-sleep! timeout)
-  (let* ((now (current-time))
-	 (diff (- timeout now)))
-    (if (> diff 0)
-	(sleep (* diff 1000)))))
+  (let ((n (%thread-timeout->seconds timeout)))
+    (unless n
+      (error 'thread-sleep! "cannot used #f as timeout"))
+    (sleep (inexact->exact (round (* 1000 n))))))
 
 
-(let ((start (current-time))
-      (let loop ((x 1))
-        (thread-sleep! (seconds->time (+ x start)))
-        (write x)
-        (loop (+ x 1))))
+(define (thread-join! thread :optional timeout (timeout-val #f timeout-val?))
+  (if (and (eq? thread (current-thread)) (not timeout))
+      (error 'thread-join! "cannot join on myself (deadlock will occur)")
+      (let ((join (%thread-join! thread
+				 (%thread-timeout->seconds timeout))))
+	(cond
+	  (join
+	     ;; We had a timeout
+	    (if timeout-val?
+		timeout-val
+		(raise (make-condition &thead-join-timeout))))
+	  ((%thread-end-exception thread)
+	     ;; We had an exceptionin thread. Raise it
+	     (raise (%thread-end-exception thread)))
+	  (else
+	   ;; No exception. Return the thread-result
+	   (%thread-end-result thread))))))
+
+
+
+(define (mutex-lock! mtx :optional timeout (thread (current-thread)))
+  (let ((res (%mutex-lock! mtx (%thread-timeout->seconds timeout) thread)))
+    ;; Different cases for res:
+    ;;  - The owning thread which is now terminated (a condition must be raised)
+    ;;  - #f: we had a timeout
+    ;;  - #t: otherwise
+    (if (thread? res)
+	(make-condition &thread-abandonned-mutex)
+	res)))
+
+(define (mutex-unlock! mtx :optional condv timeout)
+  (%mutex-unlock! mtx condv timeout))
